--- a/ControleFinanceiro/Telas/CategoriaPage.xaml
+++ b/ControleFinanceiro/Telas/CategoriaPage.xaml
@@ -22,7 +22,9 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
-            <Grid Grid.Column="1" Grid.Row="0" Padding="16,16,16,0" RowSpacing="16" Margin="0,8,0,0" CornerRadius="8,8,0,0" Background="{StaticResource Cinza9Transp10}" BorderThickness="1" BorderBrush="{StaticResource Cinza11}">
+            <Grid Grid.Column="1" Grid.Row="0" Padding="16,16,16,0" RowSpacing="16" Margin="0,8,0,0" 
+                  CornerRadius="8,8,0,0" Background="{StaticResource Cinza9Transp10}" 
+                  BorderThickness="1" BorderBrush="{StaticResource Cinza11}">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
@@ -57,19 +59,45 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                   
-                    <Grid  Grid.Row="0" Background="{StaticResource Cinza12}" CornerRadius="4,4,0,0">
+
+                    <Grid  Grid.Row="0" Background="{StaticResource Cinza12}" CornerRadius="4,4,0,0" Padding="4,0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="16"/>
-                            <ColumnDefinition Width="80"/>
+                            <ColumnDefinition Width="76"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
-                    
-                        <Border Grid.Column="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0" BorderBrush="{StaticResource Cinza9Transp50}" BorderThickness="0,0,2,0" Padding="0,0,4,0">
-                            <TextBlock Text="ID" Padding="8" HorizontalAlignment="Center"/>
+
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="34"/>
+                        </Grid.RowDefinitions>
+                        
+                        <Border Grid.Column="1" 
+                                Margin="0" 
+                                HorizontalAlignment="Stretch" 
+                                VerticalAlignment="Stretch" 
+                                BorderBrush="{StaticResource Cinza9Transp50}" 
+                                BorderThickness="0,0,1,0" 
+                                Padding="4,0">
+                            
+                            <TextBlock Text="ID" 
+                                       Foreground="{StaticResource Cinza3}"
+                                       TextWrapping="WrapWholeWords" 
+                                       Padding="0" 
+                                       HorizontalAlignment="Center" 
+                                       VerticalAlignment="Center"
+                                       FontSize="12" 
+                                       FontWeight="Normal"/>
                         </Border>
 
-                        <TextBlock Grid.Column="2" Text="Categoria" Padding="8"/>
+                        <TextBlock Grid.Column="2" 
+                                   Text="Categoria"
+                                   Foreground="{StaticResource Cinza3}"
+                                   TextWrapping="WrapWholeWords" 
+                                   Padding="0" 
+                                   HorizontalAlignment="Center" 
+                                   VerticalAlignment="Center"
+                                   FontSize="12" 
+                                   FontWeight="Normal"/>
                     </Grid>
                 
                     <ListView x:Name="lstPrincipal"
@@ -83,17 +111,36 @@
                     
                         <ListView.ItemTemplate>
                             <DataTemplate >
-                                <Grid BorderBrush="{StaticResource Cinza8}" BorderThickness="0,0,0,1" Margin="0" Padding="0">
+                                <Grid BorderBrush="{StaticResource Cinza8}" BorderThickness="0,1,0,1" Height="36" Margin="0" Padding="0">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="80"/>
                                         <ColumnDefinition Width="*"/>
                                     </Grid.ColumnDefinitions>
 
-                                    <Border Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="0" BorderBrush="{StaticResource Cinza9Transp50}" BorderThickness="0,0,2,0" Padding="0,0,4,0">
-                                        <TextBlock Text="{Binding PK_Categoria}" Padding="8" HorizontalAlignment="Center"/>
+                                    <Border Grid.Column="0" 
+                                            Margin="0" 
+                                            HorizontalAlignment="Stretch" 
+                                            VerticalAlignment="Stretch" 
+                                            BorderBrush="{StaticResource Cinza9Transp50}" 
+                                            BorderThickness="0,0,1,0" 
+                                            Padding="4,0">
+                                        
+                                        <TextBlock Text="{Binding PK_Categoria}" 
+                                                   Foreground="{StaticResource Cinza3}"
+                                                   TextWrapping="WrapWholeWords" 
+                                                   Padding="0" 
+                                                   HorizontalAlignment="Center" 
+                                                   VerticalAlignment="Center"
+                                                   FontSize="12" 
+                                                   FontWeight="Normal"/>
                                     </Border>
 
-                                    <TextBlock Grid.Column="1" Text="{Binding Nome}" Padding="8"/>
+                                    <TextBlock Grid.Column="1" 
+                                               Text="{Binding Nome}"
+                                               Foreground="{StaticResource Cinza1}"
+                                               VerticalAlignment="Center"
+                                               FontSize="12"
+                                               Padding="8,0"/>
                                 </Grid>
                             </DataTemplate>
                         </ListView.ItemTemplate>
